<resources>
    <string name="app_name">Jarvis</string>

    <!-- Strings related to login -->
    <string name="prompt_id">Id</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_id">This id is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="incorrect_message">Incorrect Username or Password</string>

    <string name="nav_opt1">Account Setup</string>
    <string name="nav_opt2">Users</string>
    <string name="nav_opt3">FAQs</string>
    <string name="nav_opt4">About</string>
    <string name="nav_opt5">Logout</string>

    <string name="adTvName">Name:</string>
    <string name="asTvId">Id:</string>
    <string name="asTvPassword">New Password:</string>
    <string name="asBuSave">Save</string>
    <string name="asBuCancel">Cancel</string>

    <item name="visible" type="id"/>
    <item name="masked" type="id"/>
    <string name="title_activity_users">Users</string>
    <string name="title_activity_account_setup">AccountSetup</string>
    <string name="asEtNameHint">Enter name</string>
    <string name="uaEtName">Name</string>
    <string name="uaEtId">Set Id</string>
    <string name="uaEtPassword">Set Password</string>
    <string name="uaBuCancel">Cancel</string>
    <string name="uaBuSave">Save</string>
    <string name="title_activity_appliances">Appliances</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="asTvOldPassword">Old Password:</string>
    <string name="title_activity_faq">Faq</string>
    <string name="title_activity_about">About</string>

</resources>

