<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_opt1"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_opt1"/>
        <item
            android:id="@+id/nav_opt2"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_opt2"/>
        <item
            android:id="@+id/nav_opt3"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_opt3"/>
        <item
            android:id="@+id/nav_opt4"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_opt4"/>

        <item
            android:id="@+id/nav_opt5"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_opt5"/>
    </group>

    <item android:title="Additional functionalities">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send"/>
        </menu>
    </item>
</menu>